# epicbox

./: .gitignore  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  rpcserver.py  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: auto-author-assign.yml  auto-format.yml  ci.yml
.github/workflows/actions/prepare/: action.yml
contrib/: epicbox_cleanup
epicbox/: __init__.py  config.py  exceptions.py  rpc.py  rpcapi.py  sandboxes.py  utils.py
epicbox/settings/: __init__.py  base.py  docker.py
requirements/: base.txt  dev.txt  docker.txt
tests/: conftest.py  test_rpc_functional.py  test_sandboxes.py  test_utils.py  utils.py
