[tool.poetry]
name = "epicbox"
version = "1.1.0"
description = "Run untrusted code in secure Docker based sandboxes"
authors = ["Pavel Sviderski <ps@stepik.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/StepicOrg/epicbox"
keywords = ["docker", "sandbox"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.11"
docker = ">=6.1.3"
python-dateutil = "^2.4"
requests = "^2.31.0"
structlog = ">=23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
